--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-  background-color: pink;
+  background: pink;
 }
 
 h1 {
@@ -13,8 +13,11 @@ h2 {
   font-style: italic;
 }
 
-ul #tasks.completed {
+.completed {
   font-family: 12px;
-  backgound-color: #ccc;
+}
+
+#tasks .completed
+  backgound: #ccc;
   text-decoration: underline;
 }
